# fancy-nes

./: Cargo.toml  LICENSE  README.md  sptest.sh
.github/workflows/: linux.yml  mac.yml  rust.yml  win.yml
fancy-nes-core/: Cargo.toml
fancy-nes-core/src/: cpu.rs  ppu.rs
fancy-nes-core/src/cpu/: debug.rs  decode.rs  mapper000.rs  mem.rs  trace.rs
nes/: Cargo.toml
nes-platform/: Cargo.toml
nes-platform/src/: debug_view.rs  lib.rs  main.rs
nes/src/: cpu.rs  lib.rs  main.rs  mem.rs  ppu.rs
nes/src/cpu/: debug.rs  decode.rs  mapper.rs  mapper000.rs  mem.rs  trace.rs
nes/src/ppu/: ppu.rs
src/: debug_view.rs  lib.rs  main.rs
tools/: exectest.sh
