[package]
name = "nes-platform"
version = "0.1.0"
edition = "2021"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf"]

[dependencies]
nes = { path = "../nes" }
clap = { version = "3.1.6", features = ["derive"] }

[features]
fceux-log = []  # Enables tracing for FCEUX-style logs
nestest-log = []  # Enables tracing for PPU-less nestest test ROM