[package]
name = "nes-platform"
version = "0.1.0"
edition = "2021"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf", "zlib"]
git = "https://github.com/microsoft/vcpkg"
rev = "aebb363eaa0b658beb19cbefdd5aa2f9cbc14f1e"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf","static-link","use-vcpkg"]

[dependencies]
nes = { path = "../nes" }
clap = { version = "3.1.6", features = ["derive"] }

[features]
fceux-log = []  # Enables tracing for FCEUX-style logs
nestest-log = []  # Enables tracing for PPU-less nestest test ROM
